[package]
name = "hast"
version = "0.1.1"
authors = ["itn3000 <itn3000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
md-5 = "0.9"
sha-1 = "0.9"
sha2 = "0.9"
sha3 = "0.9"
blake2 = "0.9"
digest = "0.9"
csv = "1.1"
glob = "0.3"